[package]
name = "minichotan"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.15"
dotenvy = "0.15"
thiserror = "1.0.32"
anyhow = "1.0.60"
url = "2"
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls"] }
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
toml = "0.5.9"
ctrlc = "3.2.3"
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["cors", "fs"] }
http = "0.2.8"
uuid = { version = "~1.1.2", features = ["v4"] }
colored_json = "~2.1.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "json" ]}
axum-sessions = "0.3.1"
async-sqlx-session = { version = "0.4.0", default-features = false, features = ["rustls", "pg"] }
